--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/apple-touch-icon.png" />
   <link rel="manifest" href="/src/assets/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Childcare Costs Calculator" />
+    <meta property="og:description" content="Estimate your annual childcare costs and savings with government funding and tax-free childcare. Fast, simple, and visual calculator for UK parents." />
+    <meta property="og:image" content="/src/assets/logo.png" />
+    <meta property="og:url" content="https://childcare-costs-calculator.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Childcare Costs Calculator" />
+    <!-- Facebook -->
+    <meta property="fb:app_id" content="966242223397117" />
+    <meta property="og:image:width" content="768" />
+    <meta property="og:image:height" content="768" />
+    <!-- WhatsApp uses Open Graph -->
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Childcare Costs Calculator" />
+    <meta name="twitter:description" content="Estimate your annual childcare costs and savings with government funding and tax-free childcare. Fast, simple, and visual calculator for UK parents." />
+    <meta name="twitter:image" content="/src/assets/logo.png" />
+    <meta name="twitter:url" content="https://childcare-costs-calculator.netlify.app/" />
+    <!-- LinkedIn uses Open Graph -->
     <title>Childcare Costs Calculator</title>
   </head>
   <body data-theme="dark">
